--- a/css/style.css
+++ b/css/style.css
@@ -16,9 +16,13 @@ body{
   
   .card{
     border:1px;
-    margin-left:55;
-    width:70%;
-    align:center;
+    margin:-100px 0 0 -150px;
+    width:500px;
+   
+    position: absolute;
+    left: 50%;
+    top: 10%;
+
     
     box-shadow: 0 2px 5 px 0 rgba(0,0.1,0.1,0.2);
     padding: 10 10 10 10;
@@ -26,7 +30,11 @@ body{
   
   fieldset{
     border:1px solid light-gray;
-  margin:10px;
+ 
    border-radius:15px;
    background-color:#f0f8ff;
+   align-content: center;
+   
+
+
   }
